Fix colour that Stevesie apparently knew was the wrong colour.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,4 +54,4 @@ $navbar-font-size: 20px;
 $main-content-padding: 70px;
 $generic-spacing: 20px;
 
-$structural-border: 1px solid lighten($primary-colour, 25%);
+$structural-border: 2px solid $primary-colour;
